--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,60 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/js/app.bad8484aaf83808a4d91.hot-update.js": "/js/app.bad8484aaf83808a4d91.hot-update.js",
+    "/js/app.542d7fad22e33d1b15ab.hot-update.js": "/js/app.542d7fad22e33d1b15ab.hot-update.js",
+    "/js/app.0cb6577caf98cdb90558.hot-update.js": "/js/app.0cb6577caf98cdb90558.hot-update.js",
+    "/js/app.247d1bf8644eabfcd51b.hot-update.js": "/js/app.247d1bf8644eabfcd51b.hot-update.js",
+    "/js/app.21248c877e0f734f208e.hot-update.js": "/js/app.21248c877e0f734f208e.hot-update.js",
+    "/js/app.93082e45b82b1e53a6c0.hot-update.js": "/js/app.93082e45b82b1e53a6c0.hot-update.js",
+    "/js/app.1648dcc85fb4b77c4839.hot-update.js": "/js/app.1648dcc85fb4b77c4839.hot-update.js",
+    "/js/app.544a287f8ac670c94bdf.hot-update.js": "/js/app.544a287f8ac670c94bdf.hot-update.js",
+    "/js/app.482b63c2b6d6aa25a809.hot-update.js": "/js/app.482b63c2b6d6aa25a809.hot-update.js",
+    "/js/app.67b5e8997649709eb82b.hot-update.js": "/js/app.67b5e8997649709eb82b.hot-update.js",
+    "/js/app.bceb4474a5d2bea18ffc.hot-update.js": "/js/app.bceb4474a5d2bea18ffc.hot-update.js",
+    "/js/app.32230d3b77fbe3c4d0ca.hot-update.js": "/js/app.32230d3b77fbe3c4d0ca.hot-update.js",
+    "/js/app.907e015cc59c36a05499.hot-update.js": "/js/app.907e015cc59c36a05499.hot-update.js",
+    "/js/app.900c906b2c7dc17f71a5.hot-update.js": "/js/app.900c906b2c7dc17f71a5.hot-update.js",
+    "/js/app.ec5c594d64d76b2e3c6f.hot-update.js": "/js/app.ec5c594d64d76b2e3c6f.hot-update.js",
+    "/js/app.b00d930505199dd85fa7.hot-update.js": "/js/app.b00d930505199dd85fa7.hot-update.js",
+    "/js/app.54684b1039757fa43fa8.hot-update.js": "/js/app.54684b1039757fa43fa8.hot-update.js",
+    "/js/app.0efc4c9b56db661c6c2a.hot-update.js": "/js/app.0efc4c9b56db661c6c2a.hot-update.js",
+    "/js/app.6e436068690a4ae76dbc.hot-update.js": "/js/app.6e436068690a4ae76dbc.hot-update.js",
+    "/js/app.038183c147729888eb15.hot-update.js": "/js/app.038183c147729888eb15.hot-update.js",
+    "/js/app.7d3f898c35d68c592367.hot-update.js": "/js/app.7d3f898c35d68c592367.hot-update.js",
+    "/js/app.9022a9d8955f7709e4fc.hot-update.js": "/js/app.9022a9d8955f7709e4fc.hot-update.js",
+    "/js/app.87e544ce5a3f8d9598be.hot-update.js": "/js/app.87e544ce5a3f8d9598be.hot-update.js",
+    "/js/app.f95d0fee4931d1870304.hot-update.js": "/js/app.f95d0fee4931d1870304.hot-update.js",
+    "/js/app.99730ca5c10653d9bccd.hot-update.js": "/js/app.99730ca5c10653d9bccd.hot-update.js",
+    "/js/app.740d4162564e75aa029e.hot-update.js": "/js/app.740d4162564e75aa029e.hot-update.js",
+    "/js/app.5303c8f7ce4a524177d2.hot-update.js": "/js/app.5303c8f7ce4a524177d2.hot-update.js",
+    "/js/app.3f6c63b8cca59849d867.hot-update.js": "/js/app.3f6c63b8cca59849d867.hot-update.js",
+    "/js/app.04e303351ac3dea82361.hot-update.js": "/js/app.04e303351ac3dea82361.hot-update.js",
+    "/js/app.032becc0cb1071ce0bd3.hot-update.js": "/js/app.032becc0cb1071ce0bd3.hot-update.js",
+    "/js/app.b94ddfa184f2e74b7072.hot-update.js": "/js/app.b94ddfa184f2e74b7072.hot-update.js",
+    "/js/app.b3b73cea2c9dc056bca7.hot-update.js": "/js/app.b3b73cea2c9dc056bca7.hot-update.js",
+    "/js/app.3b9e5c7faa0a4e86ab61.hot-update.js": "/js/app.3b9e5c7faa0a4e86ab61.hot-update.js",
+    "/js/app.8621aaacfffea43c0988.hot-update.js": "/js/app.8621aaacfffea43c0988.hot-update.js",
+    "/js/app.793a7bc70cc96a78bb40.hot-update.js": "/js/app.793a7bc70cc96a78bb40.hot-update.js",
+    "/js/app.ee34905fb339f84c9841.hot-update.js": "/js/app.ee34905fb339f84c9841.hot-update.js",
+    "/js/app.3b2841968fffd21c5eaa.hot-update.js": "/js/app.3b2841968fffd21c5eaa.hot-update.js",
+    "/js/app.bb9ef740360bbac0dd04.hot-update.js": "/js/app.bb9ef740360bbac0dd04.hot-update.js",
+    "/js/app.1ad341ed01c337f09b1a.hot-update.js": "/js/app.1ad341ed01c337f09b1a.hot-update.js",
+    "/js/app.23261a7fbb67193a0ed4.hot-update.js": "/js/app.23261a7fbb67193a0ed4.hot-update.js",
+    "/js/app.77090136a84b5982f216.hot-update.js": "/js/app.77090136a84b5982f216.hot-update.js",
+    "/js/app.d74dc92cdd0116a44090.hot-update.js": "/js/app.d74dc92cdd0116a44090.hot-update.js",
+    "/js/app.fb13f6d811f7fc07fad3.hot-update.js": "/js/app.fb13f6d811f7fc07fad3.hot-update.js",
+    "/js/app.d86edbc5dc45fc95f329.hot-update.js": "/js/app.d86edbc5dc45fc95f329.hot-update.js",
+    "/js/app.9d884b5142d0186874d1.hot-update.js": "/js/app.9d884b5142d0186874d1.hot-update.js",
+    "/js/app.2418679946a8cf7e54c3.hot-update.js": "/js/app.2418679946a8cf7e54c3.hot-update.js",
+    "/js/app.40dd1aa07c8457da4e0c.hot-update.js": "/js/app.40dd1aa07c8457da4e0c.hot-update.js",
+    "/js/app.be9cd482f0620542f897.hot-update.js": "/js/app.be9cd482f0620542f897.hot-update.js",
+    "/js/app.40919dedee4472ea1a10.hot-update.js": "/js/app.40919dedee4472ea1a10.hot-update.js",
+    "/js/app.8a76c22fa43ecd325551.hot-update.js": "/js/app.8a76c22fa43ecd325551.hot-update.js",
+    "/js/app.a3c0b305b50f9c5b4f3b.hot-update.js": "/js/app.a3c0b305b50f9c5b4f3b.hot-update.js",
+    "/js/app.c2e15db71788ce51069a.hot-update.js": "/js/app.c2e15db71788ce51069a.hot-update.js",
+    "/js/app.bdebab3d7df1b71e3530.hot-update.js": "/js/app.bdebab3d7df1b71e3530.hot-update.js",
+    "/js/app.aa84ed6e80c60c056371.hot-update.js": "/js/app.aa84ed6e80c60c056371.hot-update.js",
+    "/js/app.1e77a646949cc6533813.hot-update.js": "/js/app.1e77a646949cc6533813.hot-update.js",
+    "/js/app.c79ac065245be76f7c60.hot-update.js": "/js/app.c79ac065245be76f7c60.hot-update.js"
 }
