--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         {
             "name": "Echalh Adil",
             "email": "echalhadil@gmail.com",
-            "role": "Developer"
+            "role": "Founder & Developer"
         }
     ],
     "license": "MIT",
