real time notification

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -174,5 +174,14 @@
     "/js/app.6056035e11d7905fb537.hot-update.js": "/js/app.6056035e11d7905fb537.hot-update.js",
     "/js/app.2777dd774b43f66da4c7.hot-update.js": "/js/app.2777dd774b43f66da4c7.hot-update.js",
     "/js/app.22c92f733f014dc7d63a.hot-update.js": "/js/app.22c92f733f014dc7d63a.hot-update.js",
-    "/js/app.838197cd0d47cc677f1a.hot-update.js": "/js/app.838197cd0d47cc677f1a.hot-update.js"
+    "/js/app.838197cd0d47cc677f1a.hot-update.js": "/js/app.838197cd0d47cc677f1a.hot-update.js",
+    "/js/app.d752b1b172461025cc87.hot-update.js": "/js/app.d752b1b172461025cc87.hot-update.js",
+    "/js/app.97e0d94696b3e75abd45.hot-update.js": "/js/app.97e0d94696b3e75abd45.hot-update.js",
+    "/js/app.70e4ef69370a1177f414.hot-update.js": "/js/app.70e4ef69370a1177f414.hot-update.js",
+    "/js/app.8e702b2123d0c508965f.hot-update.js": "/js/app.8e702b2123d0c508965f.hot-update.js",
+    "/js/app.05f444b6323fd30627f5.hot-update.js": "/js/app.05f444b6323fd30627f5.hot-update.js",
+    "/js/app.b30ce7e17877b26bf7cd.hot-update.js": "/js/app.b30ce7e17877b26bf7cd.hot-update.js",
+    "/js/app.d47349ead9fd3659518f.hot-update.js": "/js/app.d47349ead9fd3659518f.hot-update.js",
+    "/js/app.f3e98763ba4bffdda90b.hot-update.js": "/js/app.f3e98763ba4bffdda90b.hot-update.js",
+    "/js/app.990764857179c66a3465.hot-update.js": "/js/app.990764857179c66a3465.hot-update.js"
 }
