--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -423,5 +423,10 @@
     "/js/app.b27780ac5fab631abc32.hot-update.js": "/js/app.b27780ac5fab631abc32.hot-update.js",
     "/js/app.462589f5d1daef6de192.hot-update.js": "/js/app.462589f5d1daef6de192.hot-update.js",
     "/js/app.15b26b7f1ed2b57ea80c.hot-update.js": "/js/app.15b26b7f1ed2b57ea80c.hot-update.js",
-    "/js/app.61e238f7a0a22d6bebe5.hot-update.js": "/js/app.61e238f7a0a22d6bebe5.hot-update.js"
+    "/js/app.61e238f7a0a22d6bebe5.hot-update.js": "/js/app.61e238f7a0a22d6bebe5.hot-update.js",
+    "/js/app.67a4d8f4d0497d8b6e8d.hot-update.js": "/js/app.67a4d8f4d0497d8b6e8d.hot-update.js",
+    "/js/app.330420d23e062731a895.hot-update.js": "/js/app.330420d23e062731a895.hot-update.js",
+    "/js/app.861860fd4aec829508f8.hot-update.js": "/js/app.861860fd4aec829508f8.hot-update.js",
+    "/js/app.34c3eca08e5b3091b022.hot-update.js": "/js/app.34c3eca08e5b3091b022.hot-update.js",
+    "/js/app.057174a816c4c92705da.hot-update.js": "/js/app.057174a816c4c92705da.hot-update.js"
 }
