--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -520,5 +520,64 @@
     "/js/app.b1b536aab092dfb24037.hot-update.js": "/js/app.b1b536aab092dfb24037.hot-update.js",
     "/js/app.5a907f4e5c86a5e8b3ca.hot-update.js": "/js/app.5a907f4e5c86a5e8b3ca.hot-update.js",
     "/js/app.1279ec46ee9be4824946.hot-update.js": "/js/app.1279ec46ee9be4824946.hot-update.js",
-    "/js/app.3ca997d82e798cb7ea8b.hot-update.js": "/js/app.3ca997d82e798cb7ea8b.hot-update.js"
+    "/js/app.3ca997d82e798cb7ea8b.hot-update.js": "/js/app.3ca997d82e798cb7ea8b.hot-update.js",
+    "/js/app.2ab68ebf7bc0adec0621.hot-update.js": "/js/app.2ab68ebf7bc0adec0621.hot-update.js",
+    "/js/app.459f96cc48e7da90b641.hot-update.js": "/js/app.459f96cc48e7da90b641.hot-update.js",
+    "/js/app.42b88b84be49bc7da341.hot-update.js": "/js/app.42b88b84be49bc7da341.hot-update.js",
+    "/js/app.e9c31913e9386cee0111.hot-update.js": "/js/app.e9c31913e9386cee0111.hot-update.js",
+    "/js/app.50fc1ce1014ea55eb7bf.hot-update.js": "/js/app.50fc1ce1014ea55eb7bf.hot-update.js",
+    "/js/app.b8998cbb504c6dba6c11.hot-update.js": "/js/app.b8998cbb504c6dba6c11.hot-update.js",
+    "/js/app.245e94b7e0cd81ca5873.hot-update.js": "/js/app.245e94b7e0cd81ca5873.hot-update.js",
+    "/js/app.a2e9b36515c60bb81070.hot-update.js": "/js/app.a2e9b36515c60bb81070.hot-update.js",
+    "/js/app.115d805a9c0dbad99584.hot-update.js": "/js/app.115d805a9c0dbad99584.hot-update.js",
+    "/js/app.f97ebfbadaa7e68cd6f8.hot-update.js": "/js/app.f97ebfbadaa7e68cd6f8.hot-update.js",
+    "/js/app.dff59e9bb326a0123bd3.hot-update.js": "/js/app.dff59e9bb326a0123bd3.hot-update.js",
+    "/js/app.1840121a3b476e27c5be.hot-update.js": "/js/app.1840121a3b476e27c5be.hot-update.js",
+    "/js/app.7f9e738204d39b86cc51.hot-update.js": "/js/app.7f9e738204d39b86cc51.hot-update.js",
+    "/js/app.0e7512bd57bd79228109.hot-update.js": "/js/app.0e7512bd57bd79228109.hot-update.js",
+    "/js/app.cc2cb72c77fd6f6161bf.hot-update.js": "/js/app.cc2cb72c77fd6f6161bf.hot-update.js",
+    "/js/app.7ec40695b7e67985eaca.hot-update.js": "/js/app.7ec40695b7e67985eaca.hot-update.js",
+    "/js/app.c8c0b241d93e46f92c22.hot-update.js": "/js/app.c8c0b241d93e46f92c22.hot-update.js",
+    "/js/app.26762d0f5fccd5163304.hot-update.js": "/js/app.26762d0f5fccd5163304.hot-update.js",
+    "/js/app.f5f072f13a3932c1ef2b.hot-update.js": "/js/app.f5f072f13a3932c1ef2b.hot-update.js",
+    "/js/app.df4bbf3473e45f72fd90.hot-update.js": "/js/app.df4bbf3473e45f72fd90.hot-update.js",
+    "/js/app.d5dc6901a06ac154495a.hot-update.js": "/js/app.d5dc6901a06ac154495a.hot-update.js",
+    "/js/app.768e8bbcf4608117ab84.hot-update.js": "/js/app.768e8bbcf4608117ab84.hot-update.js",
+    "/js/app.a1cdd5d303c944f8de37.hot-update.js": "/js/app.a1cdd5d303c944f8de37.hot-update.js",
+    "/js/app.787dd7250193aeb052e6.hot-update.js": "/js/app.787dd7250193aeb052e6.hot-update.js",
+    "/js/app.99037d951eb8810ebd3e.hot-update.js": "/js/app.99037d951eb8810ebd3e.hot-update.js",
+    "/js/app.a5e6c739a79d882cdbf9.hot-update.js": "/js/app.a5e6c739a79d882cdbf9.hot-update.js",
+    "/js/app.20d3b74fa0d60575b3e5.hot-update.js": "/js/app.20d3b74fa0d60575b3e5.hot-update.js",
+    "/js/app.e9ba946b89d733a83a6d.hot-update.js": "/js/app.e9ba946b89d733a83a6d.hot-update.js",
+    "/js/app.ea120af8b737a857405f.hot-update.js": "/js/app.ea120af8b737a857405f.hot-update.js",
+    "/js/app.6b1cb17a71ab3608ea61.hot-update.js": "/js/app.6b1cb17a71ab3608ea61.hot-update.js",
+    "/js/app.afb15646b45ece2ff11e.hot-update.js": "/js/app.afb15646b45ece2ff11e.hot-update.js",
+    "/js/app.5ac03b7d1a102b91d662.hot-update.js": "/js/app.5ac03b7d1a102b91d662.hot-update.js",
+    "/js/app.8b3cad7708b7b9b23247.hot-update.js": "/js/app.8b3cad7708b7b9b23247.hot-update.js",
+    "/js/app.1591f082402eec88013b.hot-update.js": "/js/app.1591f082402eec88013b.hot-update.js",
+    "/js/app.2ed377a8787d7aacecff.hot-update.js": "/js/app.2ed377a8787d7aacecff.hot-update.js",
+    "/js/app.71c5de200896db31af68.hot-update.js": "/js/app.71c5de200896db31af68.hot-update.js",
+    "/js/app.e09d6647bea4ac2a3db8.hot-update.js": "/js/app.e09d6647bea4ac2a3db8.hot-update.js",
+    "/js/app.e7ce30ee27bd76627390.hot-update.js": "/js/app.e7ce30ee27bd76627390.hot-update.js",
+    "/js/app.a9582706b94419b90fb3.hot-update.js": "/js/app.a9582706b94419b90fb3.hot-update.js",
+    "/js/app.f56fc819fccd6421e63d.hot-update.js": "/js/app.f56fc819fccd6421e63d.hot-update.js",
+    "/js/app.ed1d891d6ee0abe27ccd.hot-update.js": "/js/app.ed1d891d6ee0abe27ccd.hot-update.js",
+    "/js/app.b23010d435deb269658c.hot-update.js": "/js/app.b23010d435deb269658c.hot-update.js",
+    "/js/app.42886462e0bccb699c24.hot-update.js": "/js/app.42886462e0bccb699c24.hot-update.js",
+    "/js/app.f6c46048baca0caf3f2b.hot-update.js": "/js/app.f6c46048baca0caf3f2b.hot-update.js",
+    "/js/app.e9f87ab79d5802e49e59.hot-update.js": "/js/app.e9f87ab79d5802e49e59.hot-update.js",
+    "/js/app.36f6f392f369226fc3b1.hot-update.js": "/js/app.36f6f392f369226fc3b1.hot-update.js",
+    "/js/app.c4722df3ea858d0e2d09.hot-update.js": "/js/app.c4722df3ea858d0e2d09.hot-update.js",
+    "/js/app.ed5ceb48281c2935efef.hot-update.js": "/js/app.ed5ceb48281c2935efef.hot-update.js",
+    "/js/app.c54a61f879cc1ed81b6d.hot-update.js": "/js/app.c54a61f879cc1ed81b6d.hot-update.js",
+    "/js/app.0d0e93e7eb83297bf881.hot-update.js": "/js/app.0d0e93e7eb83297bf881.hot-update.js",
+    "/js/app.5f5ca64a606379dfd869.hot-update.js": "/js/app.5f5ca64a606379dfd869.hot-update.js",
+    "/js/app.c35f7ec23de4d0abde92.hot-update.js": "/js/app.c35f7ec23de4d0abde92.hot-update.js",
+    "/js/app.2b7262290a2a10d6c028.hot-update.js": "/js/app.2b7262290a2a10d6c028.hot-update.js",
+    "/js/app.0c72ed2d95620268a55c.hot-update.js": "/js/app.0c72ed2d95620268a55c.hot-update.js",
+    "/js/app.6ad2291c2777bfb37f50.hot-update.js": "/js/app.6ad2291c2777bfb37f50.hot-update.js",
+    "/js/app.4b3e107db736a6028e87.hot-update.js": "/js/app.4b3e107db736a6028e87.hot-update.js",
+    "/js/app.1d1b9fdea80d44873c18.hot-update.js": "/js/app.1d1b9fdea80d44873c18.hot-update.js",
+    "/js/app.23f2315efadd13c23a44.hot-update.js": "/js/app.23f2315efadd13c23a44.hot-update.js",
+    "/js/app.f64cd6bd3bfb4a029e2e.hot-update.js": "/js/app.f64cd6bd3bfb4a029e2e.hot-update.js"
 }
